# Benne_Dosa

./: README.md  pyproject.toml  train_data.csv
output/: final_report.txt
src/e_commerce_data_analytics_automation/: crew.py  main.py
src/e_commerce_data_analytics_automation/config/: agents.yaml  tasks.yaml
src/e_commerce_data_analytics_automation/tools/: custom_tool.py
